--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 /*
 Theme Name: STUDIOV9 WORDPRESS
 Author: Yannis Huber
-Description: to be written...
-Version: 0.0.1
-Tags: bootstrap
+Description: ...
+Version: 1.0.0
+Tags: 
 */
 
 html,
@@ -283,7 +283,7 @@ footer .sv9 {
 .menu-icon:hover,
 a:hover {
     display: block;
-    color: #3E3F40;
+    color: #555555;
 }
 
 p:empty {
@@ -300,6 +300,46 @@ a {
 
 ::-webkit-scrollbar {
     display: none;
+}
+
+.carousel {
+    width: 100%;
+    height: 100%;
+}
+
+.carousel-inner {
+    height: 100%;
+}
+
+.carousel-item {
+    height: 100%;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+.carousel-inner .carousel-item {
+    transition-property: opacity;
+}
+
+.carousel-inner .carousel-item.active,
+.carousel-inner .carousel-item-next.carousel-item-left,
+.carousel-inner .carousel-item-prev.carousel-item-right {
+    opacity: 1;
+}
+
+.carousel-inner .carousel-item,
+.carousel-inner .carousel-item.active.carousel-item-left,
+.carousel-inner .carousel-item.active.carousel-item-right {
+    opacity: 0;
+}
+
+.carousel-inner .carousel-item-next,
+.carousel-inner .carousel-item-prev,
+.carousel-inner .active.carousel-item-left,
+.carousel-inner .active.active.carousel-item-right {
+    left: 0;
+    transform: translate3d(0, 0, 0);
 }
 
 
