--- a/style.css
+++ b/style.css
@@ -360,16 +360,14 @@ a {
 }
 
 @media only screen and (max-width: 1000px) {
-    /* .main-content {
-        
-        margin: auto;
-        margin-top: 50px;
-    } */
     body {
         width: 95%;
     }
     #project-container {
         grid-template-columns: 1fr;
+    }
+    .project-item-title {
+        font-size: 1.2em;
     }
 }
 
