--- a/style.css
+++ b/style.css
@@ -348,6 +348,9 @@ a {
 } */
 
 @media only screen and (max-width: 1400px) {
+    body {
+        width: 80%;
+    }
     #project-container {
         grid-template-columns: 1fr 1fr;
     }
