--- a/style.css
+++ b/style.css
@@ -304,7 +304,7 @@ a {
 
 .carousel {
     width: 100%;
-    height: 100%;
+    height: 80%;
 }
 
 .carousel-inner {
@@ -375,6 +375,10 @@ a {
 }
 
 @media only screen and (max-width: 800px) {
+    .carousel {
+        width: 100%;
+        height: 100%;
+    }
     #contact-content {
         text-align: center;
     }
