--- a/style.css
+++ b/style.css
@@ -97,7 +97,8 @@ body {
     opacity: 0;
 }
 
-.project-item:hover>span {
+.project-item:hover>span,
+.project-item:active>span {
     -webkit-transition: opacity .2s ease-in-out;
     -moz-transition: opacity .2s ease-in-out;
     -ms-transition: opacity .2s ease-in-out;
@@ -123,7 +124,8 @@ body {
     text-transform: uppercase;
 }
 
-.project-item-title:hover {
+.project-item-title:hover,
+.project-item-title:active {
     color: black;
 }
 
@@ -155,7 +157,8 @@ nav li {
     margin-bottom: 50px;
 }
 
-.entry-content div:hover {
+.entry-content div:hover,
+.entry-content div:active {
     background-image: none!important;
 }
 
