--- a/style.css
+++ b/style.css
@@ -298,6 +298,9 @@ footer .sv9 {
     font-size: 2em;
     text-align: right;
     color: black;
+    display: table-cell;
+    vertical-align: middle;
+    text-align: center;
 }
 
 .menu-icon#close {
@@ -335,6 +338,12 @@ a {
     left: 0;
     width: 100%;
     height: 100%;
+}
+
+ion-icon {
+    display: table-cell;
+    vertical-align: middle;
+    text-align: center;
 }
 
 .carousel-inner {
