--- a/style.css
+++ b/style.css
@@ -41,6 +41,7 @@ body {
     margin-top: 30px;
     margin-bottom: 30px;
     width: 80%;
+    max-width: 1200px;
     z-index: 2;
     grid-row: 1;
     display: grid;
@@ -72,6 +73,7 @@ body {
 #project-container {
     /* grid-row: 2; */
     width: 80%;
+    max-width: 1200px;
     margin: auto;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
@@ -80,6 +82,7 @@ body {
 
 .project-content {
     width: 80%;
+    max-width: 1200px;
     margin: auto;
 }
 
@@ -182,6 +185,7 @@ footer {
     margin-top: 30px;
     margin: auto;
     width: 80%;
+    max-width: 1200px;
     grid-row: 3;
     padding-bottom: 50px;
     font-family: sukhumvit_setlight, sans-serif;
@@ -265,6 +269,7 @@ footer .sv9 {
 
 #contact {
     width: 80%;
+    max-width: 1200px;
     margin: auto;
     display: grid;
     grid-template-columns: 1fr 1fr;
