--- a/style.css
+++ b/style.css
@@ -433,6 +433,9 @@ ion-icon {
         width: 100%;
         height: 100%;
     } */
+    #title {
+        font-size: 1.6em;
+    }
     #contact-content {
         text-align: center;
     }
