--- a/style.css
+++ b/style.css
@@ -12,6 +12,10 @@ body {
     height: 100%;
 }
 
+.mobile {
+    display: none;
+}
+
 body {
     width: 100%;
     position: relative;
@@ -179,7 +183,7 @@ nav li {
 }
 
 footer {
-    margin-top: 30px;
+    padding-top: 50px;
     margin: auto;
     width: 80%;
     max-width: 1200px;
@@ -194,6 +198,21 @@ footer {
 
 footer p {
     margin: 0;
+}
+
+.wp-block-file .wp-block-file__button {
+    background: white!important;
+    color: black!important;
+}
+
+.wp-block-file__button:hover {
+    padding: 0;
+    color: #555555;
+}
+
+#arrow {
+    font-size: 1.5em;
+    float: right;
 }
 
 footer .sv9 {
@@ -314,7 +333,7 @@ footer .sv9 {
 
 .menu-icon:hover,
 a:hover {
-    display: block;
+    /* display: block; */
     color: #555555;
 }
 
@@ -433,6 +452,9 @@ ion-icon {
         width: 100%;
         height: 100%;
     } */
+    .mobile {
+        display: block;
+    }
     #title {
         font-size: 1.6em;
     }
