--- a/style.css
+++ b/style.css
@@ -192,8 +192,9 @@ footer {
     font-family: sukhumvit_setlight, sans-serif;
     font-weight: lighter;
     font-size: 0.8em;
-    /* display: grid;
-    grid-template-columns: auto auto 1fr; */
+    display: grid;
+    grid-template-columns: auto 1fr;
+    grid-template-rows: auto auto auto;
 }
 
 footer p {
@@ -212,7 +213,9 @@ footer p {
 
 #arrow {
     font-size: 1.5em;
-    float: right;
+    grid-column: 2;
+    grid-row: 3;
+    justify-self: end;
 }
 
 footer .sv9 {
@@ -221,20 +224,20 @@ footer .sv9 {
 }
 
 #footer-biel {
-    /* grid-column: 1; */
+    grid-column: 1;
+    grid-row: 1;
     margin-bottom: 10px;
 }
 
 #footer-vevey {
-    /* grid-column: 2;
-    margin-left: 40px; */
+    grid-column: 1;
+    grid-row: 2;
     margin-bottom: 10px;
 }
 
 #copyright {
-    /* grid-column: 3;
-    justify-self: right;
-    align-self: end; */
+    grid-column: 1;
+    grid-row: 3;
 }
 
 #footer-biel,
@@ -492,27 +495,4 @@ ion-icon {
         background-repeat: no-repeat;
         background-position: center;
     }
-    /* footer {
-        width: 100%;
-        padding-bottom: 20px;
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        grid-template-rows: auto auto;
-    }
-    #footer-biel {
-        grid-row: 1;
-        grid-column: 1;
-    }
-    #footer-vevey {
-        grid-row: 1;
-        grid-column: 2;
-        justify-self: right;
-        text-align: right;
-    }
-    #copyright {
-        margin-top: 10px;
-        grid-row: 2;
-        grid-column: 1 /span 2;
-        justify-self: center;
-    } */
 }
