--- a/style.css
+++ b/style.css
@@ -390,6 +390,7 @@ ion-icon {
 .carousel-inner .carousel-item-next.carousel-item-left,
 .carousel-inner .carousel-item-prev.carousel-item-right {
     opacity: 1;
+    display: block;
 }
 
 .carousel-inner .carousel-item,
@@ -412,9 +413,6 @@ ion-icon {
 } */
 
 @media only screen and (max-width: 1400px) {
-    /* body {
-        width: 80%;
-    } */
     #project-container {
         grid-template-columns: 1fr 1fr;
     }
@@ -451,10 +449,6 @@ ion-icon {
 }
 
 @media only screen and (max-width: 800px) {
-    /* .carousel {
-        width: 100%;
-        height: 100%;
-    } */
     .mobile {
         display: block;
     }
