--- a/style.css
+++ b/style.css
@@ -354,6 +354,18 @@ a {
     z-index: 3;
 }
 
+.desktop,
+.mobile {
+    position: absolute;
+    transition: opacity .5s ease-in;
+    opacity: 0;
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
 ::-webkit-scrollbar {
     display: none;
 }
@@ -386,31 +398,6 @@ ion-icon {
 
 .carousel-item img {
     width: 100%;
-}
-
-.carousel-inner .carousel-item {
-    transition-property: opacity;
-}
-
-.carousel-inner .carousel-item.active,
-.carousel-inner .carousel-item-next.carousel-item-left,
-.carousel-inner .carousel-item-prev.carousel-item-right {
-    opacity: 1;
-    display: block;
-}
-
-.carousel-inner .carousel-item,
-.carousel-inner .carousel-item.active.carousel-item-left,
-.carousel-inner .carousel-item.active.carousel-item-right {
-    opacity: 0;
-}
-
-.carousel-inner .carousel-item-next,
-.carousel-inner .carousel-item-prev,
-.carousel-inner .active.carousel-item-left,
-.carousel-inner .active.active.carousel-item-right {
-    left: 0;
-    transform: translate3d(0, 0, 0);
 }
 
 
