--- a/style.css
+++ b/style.css
@@ -90,6 +90,12 @@ body {
     margin: auto;
 }
 
+.page-main {
+    width: 80%;
+    max-width: 1200px;
+    margin: auto;
+}
+
 .project-item {
     width: 100%;
     text-align: center;
@@ -420,6 +426,9 @@ ion-icon {
         width: 95%;
     }
     .project-content {
+        width: 95%;
+    }
+    .page-main {
         width: 95%;
     }
     #project-container {
