--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 /*
 Theme Name: STUDIOV9 WORDPRESS
 Author: Yannis Huber
-Description: ...
-Version: 1.0.0
+Description: A simple template for studiov9.ch
+Version: 2.0.0
 Tags: 
 */
 
@@ -75,16 +75,12 @@ body {
 }
 
 #project-container {
-    /* grid-row: 2; */
-    width: 80%;
-    max-width: 1200px;
-    margin: auto;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-gap: 20px;
 }
 
-.project-content {
+.content {
     width: 80%;
     max-width: 1200px;
     margin: auto;
@@ -286,9 +282,6 @@ footer .sv9 {
     text-align: center;
     display: grid;
     grid-auto-columns: auto;
-    /* -webkit-box-shadow: -2px 0px 9px 0px rgba(0, 0, 0, 0.2);
-    -moz-box-shadow: -2px 0px 9px 0px rgba(0, 0, 0, 0.2);
-    box-shadow: -2px 0px 9px 0px rgba(0, 0, 0, 0.2); */
 }
 
 .show {
@@ -297,9 +290,6 @@ footer .sv9 {
 }
 
 #contact {
-    width: 80%;
-    max-width: 1200px;
-    margin: auto;
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr;
@@ -428,11 +418,6 @@ ion-icon {
     color: white !important;
 }
 
-
-/* #v9 {
-    font-family: sukhumvit_setmedium, sans-serif
-} */
-
 @media only screen and (max-width: 1400px) {
     #project-container {
         grid-template-columns: 1fr 1fr;
@@ -443,7 +428,7 @@ ion-icon {
     #title-bar {
         width: 95%;
     }
-    .project-content {
+    .content {
         width: 95%;
     }
     #page-main {
@@ -464,9 +449,6 @@ ion-icon {
 }
 
 @media only screen and (max-width: 800px) {
-    /* .mobile {
-        display: block;
-    } */
     #title {
         font-size: 1.6em;
     }
