--- a/style.css
+++ b/style.css
@@ -419,6 +419,8 @@ ion-icon {
     color: white !important;
 }
 
+.title-bar.menu-item-703 a,
+.title-bar.menu-item-703.white a,
 .menu-item-703 a {
     color: #D0232D !important;
 }
