--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ html,
 body {
     width: 100%;
     height: 100%;
+    scroll-behavior: smooth;
 }
 
 .mobile {
@@ -118,7 +119,8 @@ body.homepage #title-bar {
 .content {
     width: 80%;
     max-width: 1200px;
-    margin: auto;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 #page-main {
@@ -488,6 +490,12 @@ ion-icon {
     margin: auto;
 }
 
+#about-text {
+    font-size: 5em;
+    margin: 0;
+    align-self: center;
+}
+
 @keyframes spin {
     100% {
         transform: rotate(360deg);
@@ -532,6 +540,12 @@ li.menu-item-703 a {
 @media only screen and (max-width: 1000px) {
     #title-bar {
         width: 95%;
+    }
+    #about-text {
+        font-size: 3em;
+    }
+    #home-title {
+        font-size: 3em;
     }
     .content {
         width: 95%;
@@ -599,5 +613,12 @@ li.menu-item-703 a {
 @media only screen and (max-width: 600px) {
     #title {
         font-size: 2em;
+    }
+    #about-text {
+        font-size: 1.4em;
+        line-height: 3em;
+    }
+    #home-title {
+        font-size: 1.8em;
     }
 }
