--- a/style.css
+++ b/style.css
@@ -122,7 +122,7 @@ body.homepage #title-bar {
     -moz-transition: opacity .2s ease-in-out;
     -ms-transition: opacity .2s ease-in-out;
     -o-transition: opacity .2s ease-in-out;
-    opacity: 1;
+    opacity: 0;
 }
 
 .project-item:hover>.project-item-image {
@@ -130,7 +130,7 @@ body.homepage #title-bar {
     -moz-transition: opacity .2s ease-in-out;
     -ms-transition: opacity .2s ease-in-out;
     -o-transition: opacity .2s ease-in-out;
-    opacity: 0;
+    opacity: 0 !important;
 }
 
 .project-item:hover>span,
