Cleaned up structure

--- a/style.css
+++ b/style.css
@@ -20,27 +20,39 @@ body {
     padding: 0px;
     font-family: sukhumvit_setthin, sans-serif;
     display: grid;
-    grid-template-rows: auto 1fr auto;
+    grid-template-rows: auto;
 }
 
 body.homepage {
     height: 200vh;
-    grid-template-rows: auto auto 1fr auto;
+    grid-template-rows: auto auto;
+}
+
+#content-area {
+    grid-row: 1;
+    position: relative;
+    z-index: 5;
+    background-color: white;
+}
+
+body.homepage #content-area {
+    grid-row: 2;
+    height: 100vh;
 }
 
 .main-content {
-    grid-row: 2;
-    transition: .8s;
     width: 80%;
     max-width: 1200px;
-    height: 100%;
+    grid-row: 1;
+    transition: .8s;
     z-index: 1;
     margin: auto;
+    display: grid;
+    grid-template-rows: auto 1fr auto;
 }
 
 body.homepage .main-content {
-    grid-row: 3;
-    display: grid;
+    grid-row: 2;
     opacity: 0;
 }
 
@@ -61,7 +73,6 @@ body.homepage .main-content {
 }
 
 body.homepage #title-bar {
-    grid-row: 2;
     opacity: 0;
 }
 
@@ -91,19 +102,6 @@ body.homepage #title-bar {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-gap: 20px;
-}
-
-.content {
-    width: 80%;
-    max-width: 1200px;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-#page-main {
-    width: 80%;
-    max-width: 1200px;
-    margin: auto;
 }
 
 .project-item {
@@ -204,6 +202,7 @@ footer {
     width: 80%;
     max-width: 1200px;
     grid-row: 3;
+    grid-column: 1;
     padding-bottom: 50px;
     font-family: sukhumvit_setthin, sans-serif;
     font-weight: lighter;
@@ -211,10 +210,6 @@ footer {
     display: grid;
     grid-template-columns: auto 1fr;
     grid-template-rows: auto auto auto;
-}
-
-body.homepage footer {
-    grid-row: 4;
 }
 
 footer p {
@@ -380,7 +375,7 @@ a {
     grid-row: 1;
     grid-column: 1;
     display: grid;
-    position: relative;
+    position: fixed;
     width: 100%;
     height: 100vh;
 }
@@ -396,7 +391,7 @@ a {
     align-self: center;
 }
 
-#home-sv9 {
+#home-text {
     grid-row: 1;
     grid-column: 1;
     display: grid;
