Cleaned up structure

--- a/style.css
+++ b/style.css
@@ -493,7 +493,7 @@ li.menu-item-703 a {
     #home-title {
         font-size: 3em;
     }
-    .content {
+    .main-content {
         width: 95%;
     }
     #page-main {
