--- a/style.css
+++ b/style.css
@@ -33,6 +33,8 @@ body.homepage {
     position: relative;
     z-index: 5;
     background-color: white;
+    display: grid;
+    grid-template-rows: auto 1fr auto;
 }
 
 body.homepage #content-area {
@@ -43,10 +45,12 @@ body.homepage #content-area {
 .main-content {
     width: 80%;
     max-width: 1200px;
-    grid-row: 1;
+    grid-row: 2;
     transition: .8s;
     z-index: 1;
     margin: auto;
+    margin-top: 0;
+    margin-bottom: 0;
     display: grid;
     grid-template-rows: auto 1fr auto;
 }
@@ -54,6 +58,8 @@ body.homepage #content-area {
 body.homepage .main-content {
     grid-row: 2;
     opacity: 0;
+    margin-top: auto;
+    margin-bottom: auto;
 }
 
 #title-bar {
@@ -210,6 +216,16 @@ footer {
     display: grid;
     grid-template-columns: auto 1fr;
     grid-template-rows: auto auto auto;
+}
+
+#home-footer {
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    justify-items: center;
+    text-decoration: none;
+}
+
+#home-footer a {
+    text-decoration: none;
 }
 
 footer p {
