--- a/style.css
+++ b/style.css
@@ -547,6 +547,14 @@ li.menu-item-703 a {
     grid-row: 1;
 }
 
+.wp-block-image{
+    margin: 0;
+}
+
+.wp-block-image figcaption {
+    text-align: center;
+}
+
 @media only screen and (max-width: 1400px) {
     #project-container {
         grid-template-columns: 1fr 1fr;
