--- a/style.css
+++ b/style.css
@@ -458,9 +458,12 @@ a {
     opacity: 0;
     width: 100%;
     height: 100%;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
+}
+
+.slider-item img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 ::-webkit-scrollbar {
